--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/themes": "^2.0.3",
     "@stitches/react": "^1.2.8",
+    "@vercel/postgres": "^0.7.2",
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
