--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stitches/react": "^1.2.8",
     "@vercel/postgres": "^0.7.2",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
